# bigHW

./: CMakeLists.txt  README.md  booksProcessing.c  booksProcessing.h  borrowedProcessing.c  borrowedProcessing.h  calcHash.c  calcHash.h  logs.c  logs.h  main.c  menuAuth.c  menuAuth.h  menuFile.c  menuFile.h  parseFreeRewrite.c  parseFreeRewrite.h  sortAlgorithm.c  sortAlgorithm.h  studentsProcessing.c  studentsProcessing.h
source_files/: books.csv  student_books.csv  students.csv  users.csv
